# slack-channel-manager

./: .editorconfig  .gitignore  README.md  pyproject.toml
slack_channel_manager/: cli.py  config.py  slack.py
